--- a/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
+++ b/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScoreBoard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -21,6 +26,126 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-119" y="100"/>
+        </scene>
+        <!--Players-->
+        <scene sceneID="EQB-AC-IZ3">
+            <objects>
+                <viewController storyboardIdentifier="SBPlayerListVC" id="Xd0-gh-g6Q" customClass="SBPlayerListVC" customModule="ScoreBoard" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3uY-qh-ugX"/>
+                        <viewControllerLayoutGuide type="bottom" id="zwh-zX-SKT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MwB-tr-2pe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="PmN-Ru-Kuw">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HK5-bd-vRd">
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SBTableCell" rowHeight="80" id="qy7-EX-Y9Y" customClass="SBTableCell" customModule="ScoreBoard" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qy7-EX-Y9Y" id="38f-Me-q9a">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NP2-3R-kOy">
+                                                    <rect key="frame" x="8" y="8" width="63" height="63"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="63" id="vbN-5S-5ih"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X3R-Nu-2ue">
+                                                    <rect key="frame" x="289" y="24" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="DWo-OF-meq"/>
+                                                    </constraints>
+                                                    <state key="normal" title="S"/>
+                                                    <connections>
+                                                        <action selector="favouriteAction:" destination="qy7-EX-Y9Y" eventType="touchDown" id="5EM-du-Dgm"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zDM-4M-Ree">
+                                                    <rect key="frame" x="337" y="24" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="vKU-mQ-TsG"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3X-TQ-JOe">
+                                                    <rect key="frame" x="79" y="24" width="202" height="30"/>
+                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="top" secondItem="38f-Me-q9a" secondAttribute="topMargin" id="Eik-ka-hxH"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="top" secondItem="zDM-4M-Ree" secondAttribute="top" id="HNt-Eh-BSp"/>
+                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="leading" secondItem="X3R-Nu-2ue" secondAttribute="trailing" constant="18" id="NnL-E4-uNh"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="top" secondItem="X3R-Nu-2ue" secondAttribute="top" id="Zvg-U1-4cf"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="leading" secondItem="a3X-TQ-JOe" secondAttribute="trailing" constant="8" symbolic="YES" id="bGC-NG-GMO"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="centerY" secondItem="a3X-TQ-JOe" secondAttribute="centerY" id="bvR-B3-Rpo"/>
+                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="trailing" secondItem="38f-Me-q9a" secondAttribute="trailingMargin" id="eLG-cD-vkS"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="leading" secondItem="38f-Me-q9a" secondAttribute="leadingMargin" id="fy3-0l-OGc"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="bottom" secondItem="zDM-4M-Ree" secondAttribute="bottom" id="gpC-dy-yzz"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="bottom" secondItem="38f-Me-q9a" secondAttribute="bottomMargin" id="qSm-w6-nJ5"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="leading" secondItem="NP2-3R-kOy" secondAttribute="trailing" constant="8" symbolic="YES" id="xhd-Ns-RJy"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="bottom" secondItem="X3R-Nu-2ue" secondAttribute="bottom" id="zk3-7O-N0b"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nextImageView" destination="zDM-4M-Ree" id="IrR-TD-NqI"/>
+                                            <outlet property="playerImageView" destination="NP2-3R-kOy" id="yig-JY-bZP"/>
+                                            <outlet property="playerNameLabel" destination="a3X-TQ-JOe" id="vUb-ua-S6A"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HK5-bd-vRd" firstAttribute="bottom" secondItem="zwh-zX-SKT" secondAttribute="top" id="7P0-5R-kcK"/>
+                            <constraint firstItem="PmN-Ru-Kuw" firstAttribute="top" secondItem="3uY-qh-ugX" secondAttribute="bottom" id="J5Q-V2-5DN"/>
+                            <constraint firstItem="PmN-Ru-Kuw" firstAttribute="trailing" secondItem="HK5-bd-vRd" secondAttribute="trailing" id="QYk-v5-tZx"/>
+                            <constraint firstItem="PmN-Ru-Kuw" firstAttribute="leading" secondItem="MwB-tr-2pe" secondAttribute="leading" id="bot-LK-iV3"/>
+                            <constraint firstAttribute="trailing" secondItem="PmN-Ru-Kuw" secondAttribute="trailing" id="hdg-5F-TGK"/>
+                            <constraint firstItem="HK5-bd-vRd" firstAttribute="top" secondItem="PmN-Ru-Kuw" secondAttribute="bottom" id="mMy-ll-ib1"/>
+                            <constraint firstItem="PmN-Ru-Kuw" firstAttribute="leading" secondItem="HK5-bd-vRd" secondAttribute="leading" id="wfF-IF-MRv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Players" id="R1T-kl-I6S"/>
+                    <connections>
+                        <outlet property="playerSearchBar" destination="PmN-Ru-Kuw" id="ERv-Fl-xug"/>
+                        <outlet property="playerTableView" destination="HK5-bd-vRd" id="c26-Qf-ich"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ueq-lt-pVi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1652" y="101.19940029985008"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8H6-1z-zXJ">
+            <objects>
+                <navigationController storyboardIdentifier="SBPlayerNavigationVC" automaticallyAdjustsScrollViewInsets="NO" id="39l-RH-kwE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zoq-bN-gXy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xd0-gh-g6Q" kind="relationship" relationship="rootViewController" id="5Ek-4U-Zbk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gV3-Ub-kxB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="712.79999999999995" y="100.29985007496252"/>
         </scene>
     </scenes>
 </document>
