--- a/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
+++ b/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
@@ -58,48 +58,50 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NP2-3R-kOy">
                                                     <rect key="frame" x="8" y="8" width="63" height="63"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="63" id="vbN-5S-5ih"/>
+                                                        <constraint firstAttribute="width" constant="63" id="1bp-VX-jEs"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X3R-Nu-2ue">
-                                                    <rect key="frame" x="289" y="24" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="DWo-OF-meq"/>
-                                                    </constraints>
-                                                    <state key="normal" title="S"/>
-                                                    <connections>
-                                                        <action selector="favouriteAction:" destination="qy7-EX-Y9Y" eventType="touchDown" id="5EM-du-Dgm"/>
-                                                    </connections>
-                                                </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zDM-4M-Ree">
-                                                    <rect key="frame" x="337" y="24" width="30" height="30"/>
+                                                    <rect key="frame" x="337" y="25" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="vKU-mQ-TsG"/>
+                                                        <constraint firstAttribute="width" constant="30" id="pg7-TM-otR"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3X-TQ-JOe">
-                                                    <rect key="frame" x="79" y="24" width="202" height="30"/>
+                                                    <rect key="frame" x="79" y="25" width="202" height="30"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X3R-Nu-2ue">
+                                                    <rect key="frame" x="289" y="25" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="gCQ-b0-dSO"/>
+                                                    </constraints>
+                                                    <state key="normal" image="favourite_default"/>
+                                                    <connections>
+                                                        <action selector="favouriteAction:" destination="qy7-EX-Y9Y" eventType="touchDown" id="5EM-du-Dgm"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="top" secondItem="38f-Me-q9a" secondAttribute="topMargin" id="Eik-ka-hxH"/>
-                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="top" secondItem="zDM-4M-Ree" secondAttribute="top" id="HNt-Eh-BSp"/>
-                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="leading" secondItem="X3R-Nu-2ue" secondAttribute="trailing" constant="18" id="NnL-E4-uNh"/>
-                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="top" secondItem="X3R-Nu-2ue" secondAttribute="top" id="Zvg-U1-4cf"/>
-                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="leading" secondItem="a3X-TQ-JOe" secondAttribute="trailing" constant="8" symbolic="YES" id="bGC-NG-GMO"/>
-                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="centerY" secondItem="a3X-TQ-JOe" secondAttribute="centerY" id="bvR-B3-Rpo"/>
-                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="trailing" secondItem="38f-Me-q9a" secondAttribute="trailingMargin" id="eLG-cD-vkS"/>
-                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="leading" secondItem="38f-Me-q9a" secondAttribute="leadingMargin" id="fy3-0l-OGc"/>
-                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="bottom" secondItem="zDM-4M-Ree" secondAttribute="bottom" id="gpC-dy-yzz"/>
-                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="bottom" secondItem="38f-Me-q9a" secondAttribute="bottomMargin" id="qSm-w6-nJ5"/>
-                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="leading" secondItem="NP2-3R-kOy" secondAttribute="trailing" constant="8" symbolic="YES" id="xhd-Ns-RJy"/>
-                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="bottom" secondItem="X3R-Nu-2ue" secondAttribute="bottom" id="zk3-7O-N0b"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="leading" secondItem="NP2-3R-kOy" secondAttribute="trailing" constant="8" symbolic="YES" id="3kE-iD-pnw"/>
+                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="trailing" secondItem="38f-Me-q9a" secondAttribute="trailingMargin" id="5db-Cr-YXP"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="top" secondItem="X3R-Nu-2ue" secondAttribute="top" id="HdM-nW-BoU"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="top" secondItem="38f-Me-q9a" secondAttribute="topMargin" constant="17" id="J0m-v0-gjn"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="bottom" secondItem="38f-Me-q9a" secondAttribute="bottomMargin" id="J9S-5a-qW5"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="top" secondItem="zDM-4M-Ree" secondAttribute="top" id="Ncz-oe-ZgR"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="top" secondItem="38f-Me-q9a" secondAttribute="topMargin" id="PK3-Qc-FjU"/>
+                                                <constraint firstItem="a3X-TQ-JOe" firstAttribute="bottom" secondItem="X3R-Nu-2ue" secondAttribute="bottom" id="QtJ-3u-9PG"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="centerY" secondItem="a3X-TQ-JOe" secondAttribute="centerY" id="Weg-z2-zvy"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="leading" secondItem="a3X-TQ-JOe" secondAttribute="trailing" constant="8" symbolic="YES" id="gFH-1L-Chv"/>
+                                                <constraint firstItem="zDM-4M-Ree" firstAttribute="leading" secondItem="X3R-Nu-2ue" secondAttribute="trailing" constant="18" id="oDx-ZS-hCA"/>
+                                                <constraint firstItem="X3R-Nu-2ue" firstAttribute="bottom" secondItem="zDM-4M-Ree" secondAttribute="bottom" id="tgz-XC-HNC"/>
+                                                <constraint firstItem="NP2-3R-kOy" firstAttribute="leading" secondItem="38f-Me-q9a" secondAttribute="leadingMargin" id="zgg-Xr-URJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="favouriteButton" destination="X3R-Nu-2ue" id="FQu-GT-JoT"/>
                                             <outlet property="nextImageView" destination="zDM-4M-Ree" id="IrR-TD-NqI"/>
                                             <outlet property="playerImageView" destination="NP2-3R-kOy" id="yig-JY-bZP"/>
                                             <outlet property="playerNameLabel" destination="a3X-TQ-JOe" id="vUb-ua-S6A"/>
@@ -148,4 +150,7 @@
             <point key="canvasLocation" x="712.79999999999995" y="100.29985007496252"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favourite_default" width="16" height="16"/>
+    </resources>
 </document>
