--- a/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
+++ b/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
                                     <action selector="shareAction:" destination="sZq-EK-eRc" eventType="touchDown" id="5Sn-eh-ZXF"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S0J-HI-KWt">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S0J-HI-KWt">
                                 <rect key="frame" x="16" y="101" width="108" height="145"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="108" id="3SP-QS-Hky"/>
@@ -256,6 +256,7 @@
                         <outlet property="linkButton" destination="mMc-TA-2kN" id="OBP-xx-tUo"/>
                         <outlet property="playerCountry" destination="vC7-J1-2ea" id="lBs-ob-aKm"/>
                         <outlet property="playerDescription" destination="XZI-Eb-zWq" id="dwg-JH-WOx"/>
+                        <outlet property="playerImage" destination="S0J-HI-KWt" id="TLA-Th-XC9"/>
                         <outlet property="playerMatches" destination="cxi-ne-uvd" id="aS3-42-itO"/>
                         <outlet property="playerName" destination="m23-d0-Rsh" id="Sgb-vX-5ew"/>
                         <outlet property="playerRuns" destination="5f7-4v-o9z" id="J6l-KW-Urj"/>
@@ -279,27 +280,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kYQ-eI-1bN">
-                                <rect key="frame" x="0.0" y="20" width="375" height="579"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="535"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWf-OT-uRa">
                                 <rect key="frame" x="0.0" y="607" width="375" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="URh-3a-Wbs"/>
+                                    <constraint firstAttribute="height" constant="40" id="Y5d-l8-O3D"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3W-mQ-fQN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CA2-xf-O8r">
+                                        <rect key="frame" x="8" y="26" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="z9B-On-QYz"/>
+                                        </constraints>
+                                        <state key="normal" title="Back"/>
+                                        <connections>
+                                            <action selector="backAction:" destination="jGF-dc-IkX" eventType="touchDown" id="sam-RC-6rf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="top" constant="26" id="7L8-Xg-STf"/>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="bottom" secondItem="y3W-mQ-fQN" secondAttribute="bottomMargin" id="dxq-uW-cIL"/>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="leading" secondItem="y3W-mQ-fQN" secondAttribute="leadingMargin" id="giN-vz-vfj"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="kYQ-eI-1bN" secondAttribute="trailing" id="0lU-6e-BVt"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="leading" secondItem="iWf-OT-uRa" secondAttribute="leading" id="FBc-zb-TCU"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="trailing" secondItem="iWf-OT-uRa" secondAttribute="trailing" id="QQb-oa-NOz"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="leading" secondItem="iNE-yO-5Vl" secondAttribute="leading" id="Tbz-xG-I8q"/>
-                            <constraint firstAttribute="bottom" secondItem="iWf-OT-uRa" secondAttribute="bottom" constant="20" symbolic="YES" id="X0m-eO-oDv"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="top" secondItem="fal-EX-JWu" secondAttribute="bottom" id="axv-Pb-B1M"/>
-                            <constraint firstItem="iWf-OT-uRa" firstAttribute="top" secondItem="kYQ-eI-1bN" secondAttribute="bottom" constant="8" symbolic="YES" id="fek-Pa-z5o"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="kYQ-eI-1bN" secondAttribute="leading" id="7ke-cE-HLT"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="trailing" secondItem="kYQ-eI-1bN" secondAttribute="trailing" id="92q-EB-5rq"/>
+                            <constraint firstAttribute="trailing" secondItem="y3W-mQ-fQN" secondAttribute="trailing" id="9d6-bV-TnI"/>
+                            <constraint firstItem="iWf-OT-uRa" firstAttribute="top" secondItem="kYQ-eI-1bN" secondAttribute="bottom" constant="8" symbolic="YES" id="9ia-dO-pbK"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="trailing" secondItem="iWf-OT-uRa" secondAttribute="trailing" id="KGW-MP-0C7"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="leading" secondItem="iWf-OT-uRa" secondAttribute="leading" id="ODO-ni-5NP"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="iNE-yO-5Vl" secondAttribute="leading" id="VRN-Vv-jio"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="top" secondItem="iNE-yO-5Vl" secondAttribute="top" id="Xn1-W0-6ZH"/>
+                            <constraint firstAttribute="bottom" secondItem="iWf-OT-uRa" secondAttribute="bottom" constant="20" symbolic="YES" id="faK-rs-YMP"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="bottom" id="j3g-V8-rhY"/>
                         </constraints>
                     </view>
                     <connections>
