--- a/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
+++ b/ScoreBoard/ScoreBoard/Base.lproj/Main.storyboard
@@ -52,10 +52,10 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qy7-EX-Y9Y" id="38f-Me-q9a">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NP2-3R-kOy">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_default" translatesAutoresizingMaskIntoConstraints="NO" id="NP2-3R-kOy">
                                                     <rect key="frame" x="8" y="8" width="63" height="63"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="63" id="1bp-VX-jEs"/>
@@ -170,7 +170,7 @@
                                     <action selector="shareAction:" destination="sZq-EK-eRc" eventType="touchDown" id="5Sn-eh-ZXF"/>
                                 </connections>
                             </button>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S0J-HI-KWt">
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_default" translatesAutoresizingMaskIntoConstraints="NO" id="S0J-HI-KWt">
                                 <rect key="frame" x="16" y="101" width="108" height="145"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="108" id="3SP-QS-Hky"/>
@@ -279,13 +279,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kYQ-eI-1bN">
-                                <rect key="frame" x="0.0" y="64" width="375" height="535"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kYQ-eI-1bN">
+                                <rect key="frame" x="0.0" y="72" width="375" height="527"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWf-OT-uRa">
                                 <rect key="frame" x="0.0" y="607" width="375" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Y5d-l8-O3D"/>
+                                    <constraint firstAttribute="height" constant="40" id="a3m-Ba-Yc1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
@@ -297,7 +298,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CA2-xf-O8r">
                                         <rect key="frame" x="8" y="26" width="46" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="46" id="z9B-On-QYz"/>
+                                            <constraint firstAttribute="width" constant="46" id="GlP-a5-KRy"/>
                                         </constraints>
                                         <state key="normal" title="Back"/>
                                         <connections>
@@ -307,24 +308,26 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="top" constant="26" id="7L8-Xg-STf"/>
-                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="bottom" secondItem="y3W-mQ-fQN" secondAttribute="bottomMargin" id="dxq-uW-cIL"/>
-                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="leading" secondItem="y3W-mQ-fQN" secondAttribute="leadingMargin" id="giN-vz-vfj"/>
+                                    <constraint firstAttribute="width" constant="375" id="KrY-QU-REM"/>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="leading" secondItem="y3W-mQ-fQN" secondAttribute="leadingMargin" id="SwX-mr-pgt"/>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="top" constant="26" id="THC-g5-7Nc"/>
+                                    <constraint firstAttribute="height" constant="64" id="axy-aN-kL1"/>
+                                    <constraint firstItem="CA2-xf-O8r" firstAttribute="bottom" secondItem="y3W-mQ-fQN" secondAttribute="bottomMargin" id="m9O-0r-zHI"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="kYQ-eI-1bN" secondAttribute="leading" id="7ke-cE-HLT"/>
-                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="trailing" secondItem="kYQ-eI-1bN" secondAttribute="trailing" id="92q-EB-5rq"/>
-                            <constraint firstAttribute="trailing" secondItem="y3W-mQ-fQN" secondAttribute="trailing" id="9d6-bV-TnI"/>
-                            <constraint firstItem="iWf-OT-uRa" firstAttribute="top" secondItem="kYQ-eI-1bN" secondAttribute="bottom" constant="8" symbolic="YES" id="9ia-dO-pbK"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="trailing" secondItem="iWf-OT-uRa" secondAttribute="trailing" id="KGW-MP-0C7"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="leading" secondItem="iWf-OT-uRa" secondAttribute="leading" id="ODO-ni-5NP"/>
-                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="iNE-yO-5Vl" secondAttribute="leading" id="VRN-Vv-jio"/>
-                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="top" secondItem="iNE-yO-5Vl" secondAttribute="top" id="Xn1-W0-6ZH"/>
-                            <constraint firstAttribute="bottom" secondItem="iWf-OT-uRa" secondAttribute="bottom" constant="20" symbolic="YES" id="faK-rs-YMP"/>
-                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="bottom" id="j3g-V8-rhY"/>
+                            <constraint firstAttribute="bottom" secondItem="iWf-OT-uRa" secondAttribute="bottom" constant="20" symbolic="YES" id="1c6-zY-Av5"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="top" secondItem="y3W-mQ-fQN" secondAttribute="bottom" constant="8" symbolic="YES" id="1xM-hO-wms"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="leading" secondItem="iWf-OT-uRa" secondAttribute="leading" id="7Ty-cN-Uwa"/>
+                            <constraint firstItem="kYQ-eI-1bN" firstAttribute="trailing" secondItem="iWf-OT-uRa" secondAttribute="trailing" id="CKB-Yt-ojx"/>
+                            <constraint firstItem="iWf-OT-uRa" firstAttribute="top" secondItem="kYQ-eI-1bN" secondAttribute="bottom" constant="8" symbolic="YES" id="DAZ-Fy-iVS"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="trailing" secondItem="kYQ-eI-1bN" secondAttribute="trailing" id="PwN-ai-ZWf"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="iNE-yO-5Vl" secondAttribute="leading" id="X9I-Dp-FvO"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="leading" secondItem="kYQ-eI-1bN" secondAttribute="leading" id="bjM-jP-aif"/>
+                            <constraint firstAttribute="trailing" secondItem="y3W-mQ-fQN" secondAttribute="trailing" id="sYy-iF-ZDh"/>
+                            <constraint firstItem="y3W-mQ-fQN" firstAttribute="top" secondItem="iNE-yO-5Vl" secondAttribute="top" id="x6h-p9-mQ1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -357,5 +360,6 @@
     </scenes>
     <resources>
         <image name="favourite_default" width="16" height="16"/>
+        <image name="user_default" width="50" height="50"/>
     </resources>
 </document>
